--- a/Resources/Private/Partials/Application/Systems.html
+++ b/Resources/Private/Partials/Application/Systems.html
@@ -21,7 +21,10 @@
                                     <p>{system.teaser}</p>
                                 </div>
                                 <f:link.action action="index" controller="System" pluginName="Systems" pageUid="{settings.systemPage}">
-                                    <f:image src="{system.thumbnail.uid}" alt="{system.name}" treatIdAsReference="TRUE" class="img-responsive" />
+                                    <f:if condition="{system.thumbnail}">
+                                        <f:then><f:image src="{system.thumbnail.uid}" alt="{system.name}" treatIdAsReference="TRUE" class="img-responsive" /></f:then>
+                                        <f:else><f:image src="{f:uri.resource(path: 'art/content-quad-systems.png', extensionName: 'template')}" alt="{system.name}" treatIdAsReference="TRUE" class="img-responsive" /></f:else>
+                                    </f:if>
                                 </f:link.action>
                             </div>
                         </div>
