--- a/Resources/Private/Partials/System/Components.html
+++ b/Resources/Private/Partials/System/Components.html
@@ -19,9 +19,10 @@
 									<h4 class="owlQuadTextHeadline">{component.name}</h4>
 									<p>{component.teaser}</p>
 								</div>
-								<a href="" class="">
-									<f:image src="{component.thumbnail.uid}" alt="{component.name}" treatIdAsReference="TRUE" class="img-responsive" />
-								</a>
+								<f:link.action action="index" controller="Component" pluginName="Components" pageUid="{settings.componentPage}">
+                 	<f:image src="{component.thumbnail.uid}" alt="{component.name}" treatIdAsReference="TRUE" class="img-responsive" />
+                 	asdasd
+								</f:link>
 							</div>
 						</div>
 					</f:for>
