--- a/Resources/Private/Partials/Application/Systems.html
+++ b/Resources/Private/Partials/Application/Systems.html
@@ -23,7 +23,7 @@
                                 <f:link.action action="index" controller="System" pluginName="Systems" pageUid="{settings.systemPage}" arguments="{item: system}">
                                     <f:if condition="{system.thumbnail}">
                                         <f:then><f:image src="{system.thumbnail.uid}" alt="{system.name}" treatIdAsReference="TRUE" class="img-responsive" /></f:then>
-                                        <f:else><f:image src="{f:uri.resource(path: 'art/content-quad-systems.png', extensionName: 'template')}" alt="{system.name}" treatIdAsReference="TRUE" class="img-responsive" /></f:else>
+                                        <f:else><f:image src="{f:uri.resource(path: 'art/system-bilderheader.png', extensionName: 'template')}" alt="{system.name}" treatIdAsReference="TRUE" class="img-responsive" /></f:else>
                                     </f:if>
                                 </f:link.action>
                             </div>
