--- a/Resources/Private/Partials/System/MoreInformation.html
+++ b/Resources/Private/Partials/System/MoreInformation.html
@@ -1,6 +1,6 @@
 <div id="weitereInformationen" class="row">
     <div class="col-sm-6">
-        <h2>[Platzhalter text]</h2>
+        <h2>{currentSystem.teaser}</h2>
     </div>
 </div>
 <p class="text-columns-2">{currentSystem.description}</p>
