--- a/Resources/Private/Templates/Component/Index.html
+++ b/Resources/Private/Templates/Component/Index.html
@@ -1,10 +1,11 @@
 <f:if condition="{currentComponent}">
 	<f:then>
 		<f:render partial="Component/HeaderImage" arguments="{components: components, currentComponent: currentComponent}" />
-		<_f:render partial="Component/MobileNavigation" arguments="{components: components}" />
-		<_f:render partial="Component/Systems" arguments="{currentComponent: currentComponent}" />
+		<!-- <_f:render partial="Component/MobileNavigation" arguments="{components: components}" /> -->
+		<f:render partial="Component/Applications" arguments="{applications: applications}" />
+		<f:render partial="Component/DummyContent" />
 	</f:then>
 	<f:else>
-		<f:render partial="Component/CategorySelector" arguments="{components: components}" />
+		<f:render partial="Component/CategorySelector" arguments="{rows: rows}" />
 	</f:else>
 </f:if>
