--- a/Resources/Private/Templates/System/Index.html
+++ b/Resources/Private/Templates/System/Index.html
@@ -7,5 +7,7 @@
 			<f:render partial="System/Components" arguments="{currentSystem: currentSystem}" />
 
 			<f:render partial="System/MoreInformation" arguments="{currentSystem: currentSystem}" />
+
+			<f:render partial="System/Contact" arguments="{currentSystem: currentSystem}" />
 		</div>
 </div>
