--- a/Resources/Private/Partials/System/HeaderImage.html
+++ b/Resources/Private/Partials/System/HeaderImage.html
@@ -25,15 +25,12 @@
                                     <!-- <img class="visible-xs img-responsive" src="{f:uri.resource(path: 'art/headerimage-system-mobile.jpg', extensionName: 'template')}"> -->
                                 </div>
                                 <div class="item">
-                                    <f:for each="{currentSystem.components}" as="component">
-                                        <f:for each="{component.articles}" as="article">
-                                            <f:if condition="{article.image}">
-                                                <f:image src="{article.image.uid}" alt="{article.name}" treatIdAsReference="TRUE" class="img-responsive cross-section" style="display: none;" id="cross-section{article.uid}" />
-                                            </f:if>
-                                        </f:for>
+                                    <f:for each="{currentSystem.crossSections}" as="crossSection">
+                                        <f:if condition="{crossSection.image}">
+                                            <f:image src="{crossSection.image.uid}" alt="{crossSection.name}" treatIdAsReference="TRUE" class="img-responsive hidden-xs cross-section" style="display: none;" id="cross-section{crossSection.uid}" />
+                                            <f:image src="{crossSection.imageMobile.uid}" alt="{crossSection.name}" treatIdAsReference="TRUE" class="img-responsive visible-xs cross-section" style="display: none;" id="cross-section{crossSection.uid}" />
+                                        </f:if>
                                     </f:for>
-                                    <!-- <img class="hidden-xs img-responsive" src="{f:uri.resource(path: 'art/headerimage-system-querschnitt.jpg', extensionName: 'template')}">
-                                    <img class="visible-xs img-responsive" src="{f:uri.resource(path: 'art/headerimage-system-querschnitt-mobile.jpg', extensionName: 'template')}"> -->
                                 </div>
                             </div>
                         </div>
@@ -127,18 +124,16 @@
             <!-- Farbauswahl-->
             <div class="col-sm-12">
                 <div id="owlCarouselFarbauswahl" class="owl-carousel owlCarouselFarbauswahl">
-                    <f:for each="{currentSystem.components}" as="component">
-                        <f:for each="{component.articles}" as="article">
-                            <f:if condition="{article.color.image.originalResource}">
-                                <div class="item">
-                                    <div class="owlQuad onePxPadding">
-                                        <a href="" data-cross-section="cross-section{article.uid}" class="cross-section-link">
-                                            <f:image src="{article.color.image.originalResource.publicUrl}" alt="{article.color.name}" treatIdAsReference="TRUE" class="img-responsive" />
-                                        </a>
-                                    </div>
+                    <f:for each="{currentSystem.crossSections}" as="crossSection">
+                        <f:if condition="{crossSection.color.image.originalResource}">
+                            <div class="item">
+                                <div class="owlQuad onePxPadding">
+                                    <a href="" data-cross-section="cross-section{crossSection.uid}" class="cross-section-link">
+                                        <f:image src="{crossSection.color.image.originalResource.publicUrl}" alt="{crossSection.color.name}" treatIdAsReference="TRUE" class="img-responsive" />
+                                    </a>
                                 </div>
-                            </f:if>
-                        </f:for>
+                            </div>
+                        </f:if>
                     </f:for>
                 </div>
             </div>
